Fixed issue with scrollbars related to default padding values.

--- a/css/table.css
+++ b/css/table.css
@@ -34,4 +34,5 @@ table.ngc {
 
 .ngc.scroll-wrapper-cell {
     vertical-align: middle;
+    padding: 0px;
 }
